--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 data-900="left: 0%; top:-30%; transform: translateX(-50%) scale(8); opacity:1;"
                 data-1000="left: 0%; top:-40%; transform: translateX(-50%) scale(13); opacity:0;">
                 <h2>
-                    <span data-0="opacity:1" data-300="opacity:0">WELCOME <br> JinHyuk </span>
+                    <span data-0="opacity:1" data-300="opacity:0">WELCOME TO<br> JINHYUK </span>
                     PORTFOLIO
                 </h2>
                 <div class="line"></div>
