--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <link rel="stylesheet" href="sweetalert2.min.css">
 
     <link rel="stylesheet" href="css/style.css">
-
+    <!-- js -->
+    <script src="./js/style.js"></script>
 </head>
 
 <body>
@@ -35,6 +36,7 @@
 
         <div id="welcome">
             <div class="line"></div>
+
             <div class="wel_bg" data-600="opacity:1" data-800="opacity:0"></div> <!-- //wel_bg -->
             <div class="wel_text" data-0="opacity:1; left: 50%; top:52%;"
                 data-300="left: 27%; top:30%; transform: translateX(-50%) scale(1);"
@@ -43,9 +45,10 @@
                 data-900="left: 0%; top:-30%; transform: translateX(-50%) scale(8); opacity:1;"
                 data-1000="left: 0%; top:-40%; transform: translateX(-50%) scale(13); opacity:0;">
                 <h2>
-                    <span data-0="opacity:1" data-300="opacity:0">WELCOME TO<br> JINHYUK </span>
+                    <span class="" data-0="opacity:1" data-300="opacity:0">WELCOME TO<br> JINHYUK </span>
                     PORTFOLIO
                 </h2>
+
                 <div class="line"></div>
             </div><!-- //wel_text -->
 
