--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이진혁-포트폴리오</title>
 
@@ -87,6 +87,7 @@
                 <div class="content">
                     <div class="tit">
 
+
                         <div class="desc">
                             <div class="keyword">
                                 <span>K</span>
@@ -135,7 +136,16 @@
                                 </defs>
                             </svg>
 
+                            <div class="box" data-0="transform: scale(1) rotate(0deg);background-color: rgb(0,0,0)"
+                                data-1000="transform: scale(4) rotate(0deg);background-color: rgb(255,0,0)"
+                                data-1500="transform: scale(4) rotate(45deg);background-color: rgb(255,0,0)"
+                                data-2500="transform: scale(8) rotate(180deg);background-color: rgb(255,255,0);border-radius: 0%"
+                                data-3550="transform: scale(8) rotate(360deg);background-color: rgb(255,255,0);border-radius: 100%"
+                                data-3750="transform: scale(8) rotate(180deg);background-color: rgb(255,255,0);border-radius: 50% ">
+                            </div>
                         </div>
+
+
                     </div>
                 </div>
                 <!-- //content -->
@@ -158,7 +168,7 @@
                         <span>#04</span>
                         <h2>hobby</h2>
                         <ul>
-                            <li>야구 시청</li>
+                            <li>스포츠 경기 시청</li>
                             <li>독서</li>
                         </ul>
                     </div>
