--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
                                 <span data-2000="  left: 37%;" data-2300="left: 0%;" data-3100="left: 0%;"
                                     data-3400="left: 37%;"></span>
                             </div>
+
+
                             <div class="gooey" aria-hidden="true"></div>
                             <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
                                 <defs>
@@ -144,9 +146,20 @@
                                 data-3750="transform: scale(8) rotate(180deg);background-color: rgb(255,255,0);border-radius: 50% ">
                             </div>
                         </div>
+                        <div class="tit_bg">
+                            <img data-2000="opacity:1;" data-2300="opacity:0;" src="images/b.png" alt="명암"
+                                class="skrollable skrollable-after" style="opacity: 0;">
+                            <img src="images/b.png" alt="명암" data-2000="opacity:0; transform:scale(0);"
+                                data-2300="opacity:1; transform:scale(1);" data-2900="opacity:1;" data-3100="opacity:0;"
+                                class="skrollable skrollable-after" style="opacity: 0; transform: scale(1);">
+                            <img src="images/b.png" alt="명암" data-3100="opacity:0;" data-3400="opacity:1;"
+                                class="skrollable skrollable-after" style="opacity: 0.775665; transform: scale(1);">
+                        </div>
+
 
 
                     </div>
+
                 </div>
                 <!-- //content -->
             </section> <!-- //home -->
