--- a/index.html
+++ b/index.html
@@ -147,13 +147,15 @@
                             </div>
                         </div>
                         <div class="tit_bg">
-                            <img data-2000="opacity:1;" data-2300="opacity:0;" src="images/b.png" alt="명암"
-                                class="skrollable skrollable-after" style="opacity: 0;">
-                            <img src="images/b.png" alt="명암" data-2000="opacity:0; transform:scale(0);"
-                                data-2300="opacity:1; transform:scale(1);" data-2900="opacity:1;" data-3100="opacity:0;"
-                                class="skrollable skrollable-after" style="opacity: 0; transform: scale(1);">
-                            <img src="images/b.png" alt="명암" data-3100="opacity:0;" data-3400="opacity:1;"
-                                class="skrollable skrollable-after" style="opacity: 0.775665; transform: scale(1);">
+                            <img data-2000="opacity:1;" data-2300="opacity:0;" src="images/splash-4117519_1280.png"
+                                alt="명암" class="skrollable skrollable-after" style="opacity: 0;">
+                            <img src="images/watercolor-4116932_1280.png" alt="명암"
+                                data-2000="opacity:0; transform:scale(0);" data-2300="opacity:1; transform:scale(1);"
+                                data-2900="opacity:1;" data-3100="opacity:0;" class="skrollable skrollable-after"
+                                style="opacity: 0; transform: scale(1);">
+                            <img src="images/watercolor-7009981_1280.png" alt="명암" data-3100="opacity:0;"
+                                data-3400="opacity:1;" class="skrollable skrollable-after"
+                                style="opacity: 0.775665; transform: scale(1);">
                         </div>
 
 
