--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
                 data-800="left: 0%; top:-29%; transform: translateX(-50%) scale(8);"
                 data-900="left: 0%; top:-30%; transform: translateX(-50%) scale(8); opacity:1;"
                 data-1000="left: 0%; top:-40%; transform: translateX(-50%) scale(13); opacity:0;">
-                <h2 class="holographic">
-                    <span data-0="opacity:1" data-300="opacity:0">WELCOME TO<br> JINHYUK </span>
+                <h2 class="container">
+                    <span class="title" data-0="opacity:1" data-300="opacity:0">WELCOME TO<br> JINHYUK </span>
                     PORTFOLIO
                 </h2>
+
             </div><!-- //wel_text -->
 
 
@@ -112,53 +113,28 @@
 
 
 
-                            <div class="line">
-                                <span data-2000="display:block;  bottom: 45%;" data-2300="display:none"
-                                    data-3100="display:block;   bottom: 0%;"
-                                    data-3400="display:block; bottom: 45%;"></span>
-                                <span data-2000="  left: -37%;" data-2300="  left: 0%;" data-3100="  left: 0%;"
-                                    data-3400="left: -37%;"></span>
-                                <span data-2000="display:block; top: 96%;" data-2300="display:none"
-                                    data-3100="display:block;   top: 99.3%"
-                                    data-3400="display:block;  top: 96%;"></span>
-                                <span data-2000="  left: 37%;" data-2300="left: 0%;" data-3100="left: 0%;"
-                                    data-3400="left: 37%;"></span>
-                            </div>
 
 
-                            <div class="gooey" aria-hidden="true"></div>
-                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-                                <defs>
-                                    <filter id="goo">
-                                        <feGaussianBlur in="SourceGraphic" stdDeviation="50" result="blur" />
-                                        <feColorMatrix in="blur" mode="matrix"
-                                            values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 20 -10" result="goo" />
-                                        <feBlend in="SourceGraphic" in2="goo" />
-                                    </filter>
-                                </defs>
-                            </svg>
-
-                            <div class="box" data-0="transform: scale(1) rotate(0deg);background-color: rgb(0,0,0)"
-                                data-1000="transform: scale(4) rotate(0deg);background-color: rgb(255,0,0)"
-                                data-1500="transform: scale(4) rotate(45deg);background-color: rgb(255,0,0)"
-                                data-2500="transform: scale(8) rotate(180deg);background-color: rgb(255,255,0);border-radius: 0%"
-                                data-3550="transform: scale(8) rotate(360deg);background-color: rgb(255,255,0);border-radius: 100%"
-                                data-3750="transform: scale(8) rotate(180deg);background-color: rgb(255,255,0);border-radius: 50% ">
-                            </div>
                         </div>
                         <div class="tit_bg">
                             <img data-2000="opacity:1;" data-2300="opacity:0;" src="images/splash-4117519_1280.png"
                                 alt="명암" class="skrollable skrollable-after" style="opacity: 0;">
-                            <img src="images/watercolor-4116932_1280.png" alt="명암"
-                                data-2000="opacity:0; transform:scale(0);" data-2300="opacity:1; transform:scale(1);"
-                                data-2900="opacity:1;" data-3100="opacity:0;" class="skrollable skrollable-after"
-                                style="opacity: 0; transform: scale(1);">
-                            <img src="images/watercolor-7009981_1280.png" alt="명암" data-3100="opacity:0;"
-                                data-3400="opacity:1;" class="skrollable skrollable-after"
-                                style="opacity: 0.775665; transform: scale(1);">
+                            <img src="images/ink-8162726_1280.png" alt="명암" data-2000="opacity:0; transform:scale(0);"
+                                data-2300="opacity:1; transform:scale(1);" data-2900="opacity:1;" data-3100="opacity:0;"
+                                class="skrollable skrollable-after" style="opacity: 0; transform: scale(1);">
+                            <img src="images/ink-rrre.png" alt="명암" data-3100="opacity:0;" data-3400="opacity:1;"
+                                class="skrollable skrollable-after" style="opacity: 0.775665; transform: scale(1);">
                         </div>
 
-
+                        <div class="tit_bg2">
+                            <img data-2000="opacity:1;" data-2300="opacity:0;" src="images/splash-4117519_1280.png"
+                                alt="명암" class="skrollable skrollable-after" style="opacity: 0;">
+                            <img src="images/ink-8162726_1280.png" alt="명암" data-2000="opacity:0; transform:scale(0);"
+                                data-2300="opacity:1; transform:scale(1);" data-2900="opacity:1;" data-3100="opacity:0;"
+                                class="skrollable skrollable-after" style="opacity: 0; transform: scale(1);">
+                            <img src="images/ink-rrre.png" alt="명암" data-3100="opacity:0;" data-3400="opacity:1;"
+                                class="skrollable skrollable-after" style="opacity: 0.775665; transform: scale(1);">
+                        </div>
 
                     </div>
 
