--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.css" />
 
-    <!-- gasp -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/MotionPathPlugin.min.js"></script>
-
-
     <!-- sweetalert2 -->
     <link rel="stylesheet" href="sweetalert2.min.css">
 
@@ -64,15 +58,6 @@
         </div>
 
 
-        <script>const text = document.querySelector('.holographic');
-
-            text.addEventListener('mousemove', (e) => {
-                gsap.to(text, {
-                    '--x': `${(e.offsetX / window.innerWidth) * 100}%`,
-                    '--y': `${(e.offsetY / window.innerHeight) * 100}%`,
-                });
-            });
-        </script>
 
         <div id="main" data-700="opacity:0" data-1000="opacity:1">
             <section id="home" data-4000="transform:translateY(-1%);" data-4300="transform:translateY(-100%);">
@@ -81,7 +66,6 @@
                         <li class="nav_home"><a href="#home"><span data-text="HOME">HOME</span></a></li>
                         <li class="nav_about"><a href="#about"><span data-text="ABOUT ME">ABOUT ME</span></a></li>
                         <li class="nav_web"><a href="#web"><span data-text="WEB">WEB</span></a></li>
-                        <li class="nav_web2"><a href="#"><span data-text="GRAPHIC">GRAPHIC</span></a></li>
                         <li class="nav_contact"><a href="#contact"><span data-text="CONTACT">CONTACT</span></a></li>
                     </ul>
                 </div><!-- //nav -->
@@ -290,158 +274,124 @@
                     <div class="panerl_1" data-12000="left:60px" data-15000="left:-1620px">
                         <div class="p_tit p_tit1">
                             <span class="p_num">Portfolio 01</span>
-                            <span class="p_name">상상짬뽕</span>
+                            <span class="p_name">부경대 &middot; 상상짬뽕 &middot; LH토지공사</span>
                         </div>
+
+
                         <div class="web_fo" data-15100="transform:translateX(0%)"
                             data-17900="transform:translateX(-80%)">
-                            <div class="covernat">
-                                <div class="mockup">
-                                    <img src="img/portfolio/covenat01.png" alt="커버낫 모니터">
-                                    <img src="img/portfolio/covenat02.png" alt="커버낫 모니터">
-                                    <img src="img/portfolio/covenat03.png" alt="커버낫 모니터">
-                                    <img src="img/portfolio/covenat04.png" alt="커버낫 모니터">
-                                </div><!-- //mockup -->
-                                <div class="w_desc">
-                                    <div class="c_logo">
-                                        <img src="img/portfolio/covernat_logo.png" alt="커버낫 로고">
-                                    </div><!-- //c_logo -->
-                                    <div class="info">
-                                        <p>스트릿 캐주얼 브랜드 커버낫을 브랜드 아이덴티티인 빈티지함은 살리면서
-                                            고급스럽게 리디자인 하였습니다. <br> Flex로 레이아웃 설계 하였으며 Swiper 슬라이드, 다양한 마우스 hover 효과를
-                                            사용하여 동적인 웹페이지로 제작하였고 <br>
-                                            다양한 기기에서 접근가능하도록 반응형으로 제작하였습니다.
-                                        </p>
-                                    </div>
-                                    <div class="btn">
-                                        <ul>
-                                            <li><a href="img/portfolio/covernat-process.pdf"
-                                                    onclick="window.open(this.href,'_blanck','width=1080, height=900'); return false">Process</a>
-                                            </li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/portfolio/covernat/index.html"
-                                                    target="_blank">Website</a></li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/portfolio/covernat/index.html"
-                                                    onclick="window.open(this.href,'_blanck','width=768, height=900'); return false">Tablet</a>
-                                            </li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/portfolio/covernat/index.html"
-                                                    onclick="window.open(this.href,'_blanck','width=480, height=900'); return false">Mobile</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div><!-- //w_desc -->
-                            </div><!-- //covernat -->
-                            <div class="musign">
-                                <div class="screen">
-                                    <img src="img/portfolio/musign.jpg" alt="뮤자인 스크린샷"
-                                        data-15900="  transform: translateY(-3%) rotate(5deg);"
-                                        data-16400="  transform: translateY(-23%) rotate(5deg);">
-                                    <img src="img/portfolio/musign.jpg" alt="뮤자인 스크린샷"
-                                        data-15900="  transform: translateY(-28%) rotate(5deg);"
-                                        data-16400="  transform: translateY(0%) rotate(5deg);">
-                                </div> <!-- //screen -->
-                                <div class="m_desc">
-                                    <div class="m_logo">
-                                        <img src="img/portfolio/musign_logo.png" alt="뮤자인로고">
-                                    </div>
-                                    <!--//m_logo -->
-                                    <div class="m_info">
-                                        <p>
-                                            디자인 아티스트 컴퍼니 뮤자인을 <br>
-                                            Float , Scrollor 를 사용하여 반응형 홈페이지로 제작하였습니다.
-                                        </p>
-                                    </div> <!-- //m_info -->
-                                    <div class="btn">
-                                        <ul>
-                                            <li><a href="http://rndyd3.dothome.co.kr/musign/index.html"
-                                                    target="_blank">Website</a></li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/musign/index.html"
-                                                    onclick="window.open(this.href,'_blanck','width=768, height=900'); return false">Tablet</a>
-                                            </li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/musign/index.html"
-                                                    onclick="window.open(this.href,'_blanck','width=480, height=900'); return false">Mobile</a>
-                                            </li>
-                                        </ul>
-                                    </div> <!-- //btn -->
-                                </div><!-- //m_desc -->
-                            </div><!-- //musign -->
-                            <div class="megabox">
+
+                            <div class="bugyeonbox">
                                 <div class="slide_wrap">
-                                    <div class="monitor" data-16700="transform:translateY(50%); opacity:0;"
-                                        data-17000="transform:translateY(0%); opacity:1;">
-                                        <img src="img/portfolio/monitor.png" alt="모니터">
+                                    <div class="monitor" data-16700="transform:translateY(20%); ;"
+                                        data-13000="transform:translateY(0%); opacity:1;">
+                                        <img src="images/monitor.png" alt="모니터">
                                         <div class="monitor_box bottom_box"></div>
                                     </div><!-- //monitor -->
-                                    <div class="tablet" data-16700="transform:translateX(-100%); opacity:0;"
-                                        data-17000="transform:translateX(0%); opacity:1;">
-                                        <img src="img/portfolio/tablet.png" alt="타블렛">
+                                    <div class="tablet" data-16700="transform:translateX(-100%);"
+                                        data-13000="transform:translateX(0%); opacity:1;">
+                                        <img src="images/tablet.png" alt="타블렛">
                                         <div class="tablet_box bottom_box"></div>
                                     </div>
-                                    <div class="mobile" data-16700="transform:translateX(100%); opacity:0;"
-                                        data-17000="transform:translateX(0%); opacity:1;">
-                                        <img src="img/portfolio/mobile.png" alt="모바일">
+                                    <div class="mobile" data-16700="transform:translateX(75%); "
+                                        data-13000="transform:translateX(0%); opacity:1;">
+                                        <img src="images/mobile.png" alt="모바일">
                                         <div class="mobile_box bottom_box"></div>
                                     </div>
                                 </div> <!-- //slide_wrap -->
-                                <div class="mega_desc">
-                                    <div class="mega_logo">
-                                        <img src="img/portfolio/megabox_logo.png" alt="메가박스 로고">
+                                <div class="bugyeon_desc">
+
+
+                                    <div class="bugyeon_logo">
+                                        <h3>부경대학교</h3>
                                     </div>
                                     <!--//m_logo -->
-                                    <div class="mega_info">
-                                        <p>
-                                            Swiper를 사용하여 슬라이드가 구동되게 하였고 iframe api를 연결하여 유투브 영상을
-                                            재생할 수 있도록 하였으며 반응형으로 제작하였습니다.
+                                    <div class="bugyeon_info">
+                                        <span>info</span>
+                                        <p>부경대를 만들면서 라인에 신경을 많이 썻고 <br>
+                                            기존 사이트와 다르게 section 배치를 <br>
+                                            다르게 하였습니다
                                         </p>
+
+                                        <span>type</span>
+                                        <p>반응협웹</p>
+                                        <span>tool</span>
+                                        <p>HTML5 , css3 , JAVASCRIPT</p>
+
                                     </div> <!-- //m_info -->
                                     <div class="btn">
                                         <ul>
-                                            <li><a href="http://rndyd3.dothome.co.kr/mega/index.html"
-                                                    target="_blank">Website</a></li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/mega/index.html"
+                                            <li><a href="https://1213212132.github.io/buking-re/"
                                                     onclick="window.open(this.href,'_blanck','width=768, height=900'); return false">Tablet</a>
                                             </li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/mega/index.html"
-                                                    onclick="window.open(this.href,'_blanck','width=480, height=900'); return false">Mobile</a>
+                                            <li><a href="https://1213212132.github.io/buking-re/"
+                                                    target="_blank">Website</a></li>
+
+                                            <li><a href="https://1213212132.github.io/buking-re/"
+                                                    onclick="window.open(this.href,'_blanck','width=375, height=900'); return false">Mobile</a>
                                             </li>
                                         </ul>
                                     </div> <!-- //btn -->
                                 </div><!-- //m_desc -->
-                            </div><!-- //megabox -->
-                            <div class="standard">
-                                <div class="web_s" data-17400="transform:scaleY(0);" data-17800="transform:scaleY(1);">
-                                    <img src="img/portfolio/standard.jpg" alt="웹스탠다드 목업">
-                                </div>
-                                <div class="s_desc">
-                                    <div class="s_logo">
-                                        <img src="img/portfolio/web_logo.png" alt="웹스탠다드 로고">
+                            </div><!-- //bugyeonbox -->
+                            <div class="sangsangbox">
+                                <div class="slide_wrap">
+                                    <div class="monitor" data-16700="transform:translateY(12%); ;"
+                                        data-16000="transform:translateY(0%); opacity:1;">
+                                        <img src="images/monitor.png" alt="모니터">
+                                        <div class="monitor_box bottom_box"></div>
+                                    </div><!-- //monitor -->
+                                    <div class="tablet" data-16700="transform:translateX(-100%);"
+                                        data-16000="transform:translateX(0%); opacity:1;">
+                                        <img src="images/tablet.png" alt="타블렛">
+                                        <div class="tablet_box bottom_box"></div>
                                     </div>
-                                    <!--//s_logo -->
-                                    <div class="s_info">
-                                        <p>
-                                            ir효과를 사용하여 장애에 구애 없이 모든 사람이 손쉽게 정보에 접근할 수 있도록 웹표준을 준수하여 만든 사이트입니다. 반응형으로
-                                            제작되었습니다.
+                                    <div class="mobile" data-16700="transform:translateX(75%); "
+                                        data-16000="transform:translateX(0%); opacity:1;">
+                                        <img src="images/mobile.png" alt="모바일">
+                                        <div class="mobile_box bottom_box"></div>
+                                    </div>
+                                </div> <!-- //slide_wrap -->
+                                <div class="sangsang_desc">
+
+                                    <div class="sangsang_logo">
+                                        <h3>상상짬뽕</h3>
+                                    </div>
+                                    <!--//m_logo -->
+                                    <div class="sangsang_info">
+                                        <span>info</span>
+                                        <p> iframe을 사용하여 동영상을 삽입하였고 <br>
+                                            반응형을 구현하였습니다.
                                         </p>
-                                    </div> <!-- //s_info -->
+
+                                        <span>type</span>
+                                        <p>반응협웹</p>
+                                        <span>tool</span>
+                                        <p>HTML5 , css3 , JAVASCRIPT</p>
+
+                                    </div> <!-- //m_info -->
                                     <div class="btn">
                                         <ul>
-                                            <li><a href="http://rndyd3.dothome.co.kr/responsive/index.html"
-                                                    target="_blank">Website</a></li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/responsive/index.html"
+                                            <li><a href="https://1213212132.github.io/sangsang"
                                                     onclick="window.open(this.href,'_blanck','width=768, height=900'); return false">Tablet</a>
                                             </li>
-                                            <li><a href="http://rndyd3.dothome.co.kr/responsive/index.html"
-                                                    onclick="window.open(this.href,'_blanck','width=480, height=900'); return false">Mobile</a>
+                                            <li><a href="https://1213212132.github.io/sangsang"
+                                                    target="_blank">Website</a></li>
+
+                                            <li><a href="https://1213212132.github.io/sangsang"
+                                                    onclick="window.open(this.href,'_blanck','width=375, height=900'); return false">Mobile</a>
                                             </li>
                                         </ul>
                                     </div> <!-- //btn -->
-                                </div><!-- //s_desc -->
+                                </div><!-- //m_desc -->
+                            </div><!-- //sangsangbox -->
 
-                            </div><!-- //standard -->
                         </div><!-- //web_fo -->
                     </div><!-- //panerl_1 -->
                     <div class="panerl_2" data-18000="left:117px" data-21300="left:-1565px">
                         <div class="p_tit  p_tit2">
                             <span class="p_num">Portfolio 02</span>
-                            <span class="p_name">하나카드 &middot; 위니아 &middot; 맥도날드 </span>
+                            <span class="p_name">펜스타 &middot; 우주의조약돌 &middot; Unicf </span>
                         </div>
                         <div class="web_fo2" data-21500="transform:translateX(0%)"
                             data-23000="transform:translateX(-65%)">
@@ -607,7 +557,7 @@
                     <div class="panerl_3" data-23600="left:172px;" data-26600="left:-1511px">
                         <div class="p_tit p_tit3">
                             <span class="p_num">Portfolio 03</span>
-                            <span class="p_name">포토샵 &middot; 일러스트</span>
+                            <span class="p_name">아웃백 &middot; 깔끄미</span>
                         </div>
                         <div class="web_fo3">
                             <div class="stit_wrap">
